Desenvolvendo uma tela de cadastro simples e pegando os valores dos inputs

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/i"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -36,7 +35,7 @@
 
     <EditText
         android:id="@+id/inputIdade"
-        android:layout_width="70dp"
+        android:layout_width="123dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
@@ -143,11 +142,11 @@
         android:id="@+id/switchSimNao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="6dp"
         android:text="Não"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/inputPeriodoDorCabeca" />
 
     <TextView
         android:id="@+id/textView7"
@@ -158,43 +157,5 @@
         android:textSize="14dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/switchSimNao"
         app:layout_constraintStart_toEndOf="@+id/switchSimNao" />
-
-    <EditText
-        android:id="@+id/inputQntSemanasVisitadas"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:hint="Há quantas semanas?"
-        android:inputType="number"
-        android:textSize="14sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/switchSimNao"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7" />
-
-    <Button
-        android:id="@+id/buttonConsulta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:onClick="consultar"
-        android:text="Consultar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputQntSemanasVisitadas" />
-
-    <TextView
-        android:id="@+id/resultadoConsulta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="Resultado: "
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonConsulta"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputQntSemanasVisitadas"
-        app:layout_constraintVertical_bias="0.363" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
