--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,9 +190,24 @@
         android:onClick="consultar"
         android:text="Consultar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonListarPacientes"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputQntSemanasVisitadas" />
+        app:layout_constraintTop_toBottomOf="@+id/inputQntSemanasVisitadas"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/buttonListarPacientes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="listar"
+        android:text="Lista de Pacientes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.83"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputQntSemanasVisitadas"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/resultadoConsulta"
